--- a/templates/app.html
+++ b/templates/app.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/app.css">
     <title>Appuntamenti</title>
 </head>
@@ -68,8 +69,7 @@
     
   
 <div class="presentazione">
-   <h3>Questo sito è stato realizzato per il corso di Strumenti del web e data management
-   </h3>
+   <h3 class="footer-desc">Questo sito è stato realizzato per il corso di Strumenti del web e data management</h3>
    <a href="https://1drv.ms/p/c/5d240dc371e15e53/ES0DZv6bG_VHtS7Q5dvcWt0BCKDSrJC5y_FTc4PxQZA-tQ?e=J38YUr"><h3>Progetto</h3></a>
 </div>
 
