--- a/templates/info.html
+++ b/templates/info.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/stylesinfo.css">
     <title>Richiesta informazioni</title>
 
@@ -37,31 +38,31 @@
     <form action="http://www.headfirstlabs.com/contest.php" method="POST">
         <div class="tableRow">
             <p>Nome</p>
-            <p><input type="text" name="nome" value="Inserisci nome"></p>
+            <p><input type="text" name="nome" placeholder="Inserisci nome"></p>
         </div>
         <br>
 
         <div class="tableRow">
             <p>Cognome</p>
-            <p><input type="text" name="cognome" value="Inserisci cognome"></p>
+            <p><input type="text" name="cognome" placeholder="Inserisci cognome"></p>
         </div>
         <br>
 
         <div class="tableRow">
             <p>Email</p>
-            <p><input type="email" name="email" value="Inserisci email"></p>
+            <p><input type="email" name="email" placeholder="Inserisci email"></p>
         </div>
         <br>
 
         <div class="tableRow">
             <p>Telefono</p>
-            <p><input type="tel" name="numero" value="Inserisci telefono"></p>
+            <p><input type="tel" name="numero" placeholder="Inserisci telefono"></p>
         </div>
         <br>
 
         <div class="tableRow">
             <p>Richiesta</p>
-            <p><textarea name="messaggio" rows="10" cols="30"></textarea></p>
+            <p><textarea name="messaggio" rows="10" cols="30" placeholder="Inserisci messaggio"></textarea></p>
         </div>
 
         <div class="tableRow">
