--- a/templates/info.html
+++ b/templates/info.html
@@ -10,7 +10,7 @@
     <body>
         <header class="main-header">
             <div class="container">
-                <a href="../index.html" class="logo">TRE-EVENTS</a>
+                <a href="../index.html" class="logo"><h1 id="title">TRE-EVENTS</h1></a>
                 <nav class="main-nav">
                     <ul class="main-nav-list">
                         <li>
@@ -71,7 +71,7 @@
 
         </form>
         <h1>Dove Trovarci</h1>
-        <h2>Clicca sulla mappa, apri il tuo navigatore e vienici a trovare!<br> Ti aspettiamo!</h2>
+        <h2 style="text-align: center;">Clicca sulla mappa, apri il tuo navigatore e vienici a trovare!<br> Ti aspettiamo!</h2>
         <div class="mappa">
             <iframe src="https://www.google.com/maps/d/embed?mid=14iMT0DIL_G1pZ559OfZC0czI3byp6nM&ehbc=2E312F" width="900"
                 height="700"></iframe>
