--- a/templates/eventi.html
+++ b/templates/eventi.html
@@ -53,8 +53,8 @@
             <h1>Non aspettare... Il tuo sogno è a un passo da diventare realtà <br> Richiedi informazioni!</h1>
         </div>
         <div class="richiediinformazioni">    
-        <form action="info.html" target="_self">
-            <button type="submit">
+        <form action="info.html" target="_self" id="infoform">
+            <button type="submit" class="submitbtn">
                 Richiedi Info
             </button>  
         </form>
