--- a/styles/global.css
+++ b/styles/global.css
@@ -381,3 +381,43 @@ div.tableRow p:first-child{
     margin: auto;
     margin-top: 2rem;
 }
+
+.hamburger {
+    display: none;
+    font-size: 30px;
+    background: none;
+    border: none;
+    color: #efebe5;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    .hamburger {
+        display: block;
+    }
+
+    .main-nav {
+        display: none;
+        width: 100%;
+        background-color: #623e2a;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        z-index: 1000;
+    }
+
+    .main-nav-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main-nav-list li {
+        display: block;
+        margin: 10px 0;
+    }
+
+    .main-nav.active {
+        display: block;
+    }
+}
