--- a/templates/app.html
+++ b/templates/app.html
@@ -11,8 +11,10 @@
         <header class="main-header">
             <div class="container">
                 <a href="../index.html" class="logo"><h1 id="title">TRE-EVENTS</h1></a>
-                <a href="info.html"  class="Info"></a>
-                <nav class="main-nav">
+                <button class="hamburger" id="hamburger-menu">
+                    ☰
+                </button>
+                <nav class="main-nav" id="main-nav">
                     <ul class="main-nav-list">
                         <li>
                             <a href="eventi.html">Eventi</a>
@@ -21,7 +23,7 @@
                             <a href="info.html">Info</a>
                         </li>
                         <li>
-                            <a href="#" class="underline">Appuntamenti</a>
+                            <a href="app.html">Appuntamenti</a>
                         </li>
                         <li>
                             <a href="rec.html">Recensioni</a>
@@ -82,5 +84,6 @@
                 <a href="https://1drv.ms/p/c/5d240dc371e15e53/ES0DZv6bG_VHtS7Q5dvcWt0BCKDSrJC5y_FTc4PxQZA-tQ?e=J38YUr"><h3 class="progetto-text">Progetto</h3></a>
             </div>
         </footer>
+        <script src="../scripts/global.js"></script>
     </body>
 </html>
