--- a/templates/info.html
+++ b/templates/info.html
@@ -10,13 +10,16 @@
         <header class="main-header">
             <div class="container">
                 <a href="../index.html" class="logo"><h1 id="title">TRE-EVENTS</h1></a>
-                <nav class="main-nav">
+                <button class="hamburger" id="hamburger-menu">
+                    ☰
+                </button>
+                <nav class="main-nav" id="main-nav">
                     <ul class="main-nav-list">
                         <li>
-                            <a href="eventi.html"> Eventi </a>
+                            <a href="eventi.html">Eventi</a>
                         </li>
                         <li>
-                            <a href="info.html" class="underline">Info</a>
+                            <a href="info.html">Info</a>
                         </li>
                         <li>
                             <a href="app.html">Appuntamenti</a>
@@ -28,8 +31,6 @@
                 </nav>
             </div>
         </header>
-    
-
         <h1>Richiedi informazioni</h1>
         <h3> Compila il form e inviaci la tua richiesta, provvederemo a rispondere il prima possibile</h3>
         <form action="http://www.headfirstlabs.com/contest.php" method="POST">
@@ -66,8 +67,6 @@
                 <p>Invia Richiesta</p>
                 <p><input type="submit"></p>
             </div>
-            
-
         </form>
         <h1>Dove Trovarci</h1>
         <h2 style="text-align: center;">Clicca sulla mappa, apri il tuo navigatore e vienici a trovare!<br> Ti aspettiamo!</h2>
@@ -118,5 +117,6 @@
                 <a href="https://1drv.ms/p/c/5d240dc371e15e53/ES0DZv6bG_VHtS7Q5dvcWt0BCKDSrJC5y_FTc4PxQZA-tQ?e=J38YUr"><h3 class="progetto-text">Progetto</h3></a>
             </div>
         </footer>
+        <script src="../scripts/global.js"></script>
     </body>
 </html>
