--- a/templates/rec.html
+++ b/templates/rec.html
@@ -13,26 +13,28 @@
    <body>
       <header class="main-header">
          <div class="container">
-            <a href="../index.html" class="logo"><h1 id="title">TRE-EVENTS</h1></a>
-            <nav class="main-nav">
-               <ul class="main-nav-list">
-                  <li>
-                     <a href="eventi.html">Eventi</a>
-                  </li>
-                  <li>
-                     <a href="info.html">Info</a>
-                  </li>
-                  <li>
-                     <a href="app.html">Appuntamenti</a>
-                  </li>
-                  <li>
-                     <a href="#" class="underline">Recensioni</a>
-                  </li>
-                  
-               </ul>
-            </nav>
+             <a href="../index.html" class="logo"><h1 id="title">TRE-EVENTS</h1></a>
+             <button class="hamburger" id="hamburger-menu">
+                 ☰
+             </button>
+             <nav class="main-nav" id="main-nav">
+                 <ul class="main-nav-list">
+                     <li>
+                         <a href="eventi.html">Eventi</a>
+                     </li>
+                     <li>
+                         <a href="info.html">Info</a>
+                     </li>
+                     <li>
+                         <a href="app.html">Appuntamenti</a>
+                     </li>
+                     <li>
+                         <a href="rec.html">Recensioni</a>
+                     </li>
+                 </ul>
+             </nav>
          </div>
-      </header>
+     </header>
       <!-- <div class="container">
          <div id="chart_wrap">
             <div id="piechart"></div>
@@ -142,5 +144,6 @@
          </div>
       </footer>
       <script src="../scripts/rec.js"></script>
+      <script src="../scripts/global.js"></script>
    </body>
 </html>
