--- a/templates/app.html
+++ b/templates/app.html
@@ -23,7 +23,7 @@
                             <a href="info.html">Info</a>
                         </li>
                         <li>
-                            <a href="app.html">Appuntamenti</a>
+                            <a href="app.html" class="underline">Appuntamenti</a>
                         </li>
                         <li>
                             <a href="rec.html">Recensioni</a>
@@ -32,13 +32,37 @@
                 </nav>
             </div>
         </header>  
-        <div class="text"><h1>Verifica le disponibilità e prenota in autonomia un appuntamento con noi</h1></div>
-        <br>
-   
+        <div class="d-custom-flex presContainer">
+            <div class="d-custom-flex flex-custom-column flex-content-center-custom" style="margin-right: 5rem;font-size: 17px;"> 
+                <h2 style="text-align: start;">Chi sono?</h2>
+                <p style="text-align: start;">
+                    Rebecca Santegidi, nata a Foligno, dopo il diploma ho deciso
+                    di proseguire gli studi in Comunicazione.
+                    Grazie a mio padre mi sono avvicinata al mondo degli
+                    eventi, prima come aiuto catering e animazione per bambini,
+                    successivamente ho capito che quello che più mi piaceva
+                    fare era organizzare quei momenti felici.
+                </p>
+                <p style="text-align: start;">
+                    A seguito di master e corsi professionalizzanti sul settore
+                    Wedding planner e Event planner ho deciso di avviare la
+                    mia piccola agenzia, un’agenzia di nicchia.
+                </p>
+                <p style="text-align: start;">
+                    Il dettaglio è l’elemento che fa la differenza e il mio team per
+                    questo motivo si dedica alla progettazione di ogni singolo
+                    evento con un’attenzione particolare.
+                    Ogni evento deve parlare e rispecchiare i desideri del o dei
+                    protagonisti.
+                </p>
+            </div>
+            <img src="../assets/fotopres.png"/>
+        </div>
+        <div class="text">
+            <h1>Verifica le disponibilità e prenota in autonomia un appuntamento con noi</h1>
+        </div>   
         <div class="subcontainer">
             <h1>Prendi un appuntamento con noi!</h1>
-        
-         
             <iframe id="cal" src="https://calendar.google.com/calendar/embed?height=900&wkst=1&bgcolor=%23795548&ctz=Europe%2FRome&src=cmViLnNudDk5QGdtYWlsLmNvbQ&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679" ></iframe>
         </div>  
       
