--- a/templates/eventi.html
+++ b/templates/eventi.html
@@ -17,7 +17,7 @@
                 <nav class="main-nav" id="main-nav">
                     <ul class="main-nav-list">
                         <li>
-                            <a href="eventi.html">Eventi</a>
+                            <a href="eventi.html" class="underline">Eventi</a>
                         </li>
                         <li>
                             <a href="info.html">Info</a>
