--- a/templates/info.html
+++ b/templates/info.html
@@ -19,7 +19,7 @@
                             <a href="eventi.html">Eventi</a>
                         </li>
                         <li>
-                            <a href="info.html">Info</a>
+                            <a href="info.html" class="underline">Info</a>
                         </li>
                         <li>
                             <a href="app.html">Appuntamenti</a>
