--- a/templates/rec.html
+++ b/templates/rec.html
@@ -29,7 +29,7 @@
                          <a href="app.html">Appuntamenti</a>
                      </li>
                      <li>
-                         <a href="rec.html">Recensioni</a>
+                         <a href="rec.html" class="underline">Recensioni</a>
                      </li>
                  </ul>
              </nav>
