--- a/styles/global.css
+++ b/styles/global.css
@@ -281,7 +281,7 @@ h1{
 	flex-direction: column;
 }
 
-.pressContainer {
+.presContainer {
     margin-top: 1rem; 
     margin-left: 8rem;
     margin-right: 8rem;
@@ -297,7 +297,7 @@ h1{
         margin: 0;
         margin-left: 0.5rem;
     }
-    .pressContainer {
+    .presContainer {
         margin: 0;
     }
 }
