--- a/templates/rec.html
+++ b/templates/rec.html
@@ -35,7 +35,42 @@
              </nav>
          </div>
      </header>
-      <h1> Cosa dicono di noi!</h1>
+     <div style="display: flex;justify-content: space-around;">
+         <div style="position: relative;">
+            <img src="../assets/fotopres.png" style="width: 100%; height: 20rem;"/>
+            <div style="position: absolute;background-color: #ff370f;margin-left: 2rem; margin-right: 2rem; bottom: -4rem;">
+               <p style="color: #ffeae6;">
+                  Vi aiutiamo a gestire le vostre idee e le
+                  vostre preoccupazioni più grandi, per
+                  assicurarvi di vivere il vostro giorno senza
+                  stress riuscendo a godervi ogni momento
+               </p>
+            </div>
+         </div>
+         <div style="position: relative;">
+            <img src="../assets/fotopres.png" style="width: 100%; height: 20rem;"/>
+            <div style="position: absolute;background-color: #ff370f;margin-left: 2rem; margin-right: 2rem; bottom: -4rem;">
+               <p style="color: #ffeae6;">
+                  Vi aiutiamo a gestire le vostre idee e le
+                  vostre preoccupazioni più grandi, per
+                  assicurarvi di vivere il vostro giorno senza
+                  stress riuscendo a godervi ogni momento
+               </p>
+            </div>
+         </div>
+         <div style="position: relative;">
+            <img src="../assets/fotopres.png" style="width: 100%; height: 20rem;"/>
+            <div style="position: absolute;background-color: #ff370f;margin-left: 2rem; margin-right: 2rem; bottom: -4rem;">
+               <p style="color: #ffeae6;">
+                  Vi aiutiamo a gestire le vostre idee e le
+                  vostre preoccupazioni più grandi, per
+                  assicurarvi di vivere il vostro giorno senza
+                  stress riuscendo a godervi ogni momento
+               </p>
+            </div>
+         </div>
+     </div>
+      <h1 style="margin-top: 2rem;"> Cosa dicono di noi!</h1>
       <div class="review-container">
          <div class="review">
             <div class="user-foto"> 
