--- a/styles/global.css
+++ b/styles/global.css
@@ -325,6 +325,10 @@ h1{
     align-items: center;
 }
 
+.footer-element {
+    margin-left: 0.5rem;
+}
+
 form{
     display:table;
     margin-top: 20px;
