--- a/templates/info.html
+++ b/templates/info.html
@@ -33,7 +33,7 @@
         </header>
         <h1>Richiedi informazioni</h1>
         <h3> Compila il form e inviaci la tua richiesta, provvederemo a rispondere il prima possibile</h3>
-        <form action="http://www.headfirstlabs.com/contest.php" method="POST">
+        <form action="http://www.headfirstlabs.com/contest.php" method="POST" style="margin: auto; width: 30%;">
             <div class="tableRow">
                 <p>Nome</p>
                 <p><input type="text" name="nome" placeholder="Inserisci nome"></p>
