--- a/templates/app.html
+++ b/templates/app.html
@@ -33,7 +33,7 @@
             </div>
         </header>  
         <div class="d-custom-flex presContainer">
-            <div class="d-custom-flex flex-custom-column flex-content-center-custom" style="margin-right: 5rem;font-size: 17px;"> 
+            <div class="d-custom-flex flex-custom-column flex-content-center-custom" style="margin: auto;width: 50%;font-size: 17px;"> 
                 <h2 style="text-align: start;">Chi sono?</h2>
                 <p style="text-align: start;">
                     Rebecca Santegidi, nata a Foligno, dopo il diploma ho deciso
