--- a/templates/app.html
+++ b/templates/app.html
@@ -56,7 +56,7 @@
                     protagonisti.
                 </p>
             </div>
-            <img src="../assets/fotopres.png"/>
+            <img src="../assets/fotopres.png" style="margin: 1rem;"/>
         </div>
         <div class="text">
             <h1>Verifica le disponibilità e prenota in autonomia un appuntamento con noi</h1>
