--- a/styles/global.css
+++ b/styles/global.css
@@ -43,6 +43,9 @@ a:hover{
     padding:0;
     margin: 0 auto;
     background-color: #623e2a;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .social{
@@ -52,8 +55,9 @@ a:hover{
 
 .footer-details {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    gap:1rem
 }
 
 .logo{
