--- a/templates/rec.html
+++ b/templates/rec.html
@@ -124,6 +124,7 @@
             </div>
          </div>
       </div>
+   </div>
       <h1>Le recensioni dei nostri clienti</h1>
 
       <div id="piechart_3d" style="display: flex; width: 500px; height: 400px;"></div>
