--- a/templates/app.html
+++ b/templates/app.html
@@ -106,7 +106,7 @@
             
             <div class="presentazione">
                 <h3 class="footer-desc">Questo sito è stato realizzato per il corso di Strumenti del web e data management</h3>
-                <a href="https://1drv.ms/p/c/5d240dc371e15e53/ES0DZv6bG_VHtS7Q5dvcWt0BCKDSrJC5y_FTc4PxQZA-tQ?e=J38YUr"><h3 class="progetto-text">Progetto</h3></a>
+                <a href="assets/progettoSito.pdf"><h3 class="progetto-text">Progetto</h3></a>
             </div>
         </footer>
         <script src="../scripts/global.js"></script>
