--- a/templates/rec.html
+++ b/templates/rec.html
@@ -168,7 +168,7 @@
          
          <div class="presentazione">
              <h3 class="footer-desc">Questo sito è stato realizzato per il corso di Strumenti del web e data management</h3>
-             <a href="assets/progettoSito.pdf"><h3 class="progetto-text">Progetto</h3></a>
+             <a href="../assets/progettoSito.pdf" target="_blank"><h3 class="progetto-text">Progetto</h3></a>
          </div>
      </footer>
       <script src="../scripts/rec.js"></script>
