--- a/templates/app.html
+++ b/templates/app.html
@@ -106,7 +106,7 @@
             
             <div class="presentazione">
                 <h3 class="footer-desc">Questo sito è stato realizzato per il corso di Strumenti del web e data management</h3>
-                <a href="../assets/progettoSito.pdf" target="_blank"><h3 class="progetto-text">Progetto</h3></a>
+                <a href="https://drive.google.com/file/d/1YBjC-xn7fckCzAfhmn6Gd4ZwG07KoX2m/view?usp=sharing" target="_blank"><h3 class="progetto-text">Progetto</h3></a>
             </div>
         </footer>
         <script src="../scripts/global.js"></script>
