--- a/templates/app.html
+++ b/templates/app.html
@@ -58,7 +58,7 @@
                     protagonisti.
                 </p>
             </div>
-            <img src="../assets/fotopres.png" style="margin: auto;"/>
+            <img src="https://i.ibb.co/QnrzFFS/fotopres.png" alt="fotopres" border="0" style="margin: auto;">
         </div>
         <div class="text">
             <h1>Verifica le disponibilità e prenota in autonomia un appuntamento con noi</h1>
