--- a/templates/eventi.html
+++ b/templates/eventi.html
@@ -38,14 +38,14 @@
             <h1 class="nseventi">I nostri eventi</h1>
             <br>
             <h2>Tre-events vanta un'esperienza pluriennale nell'organizzazione di matrimoni, compleanni, lauree e pensionamenti</h2>
-            <img src="../assets/wedding.jpg" alt="">
+            <img src="https://i.ibb.co/HYPd2hF/wedding.jpg" alt="wedding" border="0">
             <h2 class="matrimoni">Wedding Planner</h2>
             <p class="matrimonio"> Tu pensa a dire si, al resto ci pensiamo noi<br>Scegli noi e rendi il tuo giorno indimenticabile.<br>
                 Con un ampia selezione di location, di musica dal vivo e di buffet ogni desiderio diventa realtà..
             </p>
         </div>
         <div id="festa">
-            <img src="../assets/compleanno.jpg" alt="">
+            <img src="https://i.ibb.co/ZhFZ93W/compleanno.jpg" alt="compleanno" border="0" class="index-img">
             <h2 class="feste">Event planner</h2>
             <p class="eventplanner"> I compleanni, le feste di laurea e i pensionamenti sono momenti speciali<br>
                 che celebrano traguardi importanti nella vita di ciascuno<br>Le feste organizzate da Tre-Events per festeggiare questi avvenimenti <br>
