--- a/templates/rec.html
+++ b/templates/rec.html
@@ -41,7 +41,7 @@
   </header>
    <div class="flex-container">
       <div>
-         <img src="../assets/foto1.jpeg" alt="Image 1" />
+         <img src="https://i.ibb.co/fXRjqwm/foto1.jpg" alt="foto1" border="0">
          <div>
             <p>
                Vi aiutiamo a gestire le vostre idee e le vostre preoccupazioni più grandi, per
@@ -50,7 +50,7 @@
          </div>
       </div>
       <div>
-         <img src="../assets/foto2.jpeg" alt="Image 2" />
+         <img src="https://i.ibb.co/WPTWzxG/foto2.jpg" alt="foto2" border="0">
          <div>
             <p>
                Il nostro obiettivo è lasciare te e i tuoi ospiti con un evento che superi le aspettative e che durerà
@@ -59,7 +59,7 @@
          </div>
       </div>
       <div>
-         <img src="../assets/foto3.jpeg" alt="Image 3" />
+         <img src="https://i.ibb.co/cxMC4Jq/foto3.jpg" alt="foto3" border="0">
          <div>
             <p>
                Siamo guidati da un’amore per i dettagli. Dalla bellezza di ogni singolo fiore, ogni luce posizionata al
