--- a/styles/global.css
+++ b/styles/global.css
@@ -7,6 +7,14 @@
     margin: 0;
 }
 
+.caption-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
 body{
     font-family: CatchyMager;
     font-style: normal;
