--- a/styles/global.css
+++ b/styles/global.css
@@ -556,4 +556,13 @@ div.tableRow p:first-child{
     .flex-container {
         margin: 1rem;
     }
+    .responsive-iframe-container {
+        width: 100%;
+        height: auto;
+    }
+
+    .responsive-iframe-container iframe {
+        width: 100%;
+        height: calc(100vw * 9 / 16);
+    }
 }
