--- a/templates/rec.html
+++ b/templates/rec.html
@@ -33,7 +33,7 @@
                       <a href="app.html">Appuntamenti</a>
                   </li>
                   <li>
-                      <a href="rec.html">Recensioni</a>
+                      <a href="rec.html" class="choosen">Recensioni</a>
                   </li>
               </ul>
           </nav>
@@ -72,7 +72,7 @@
    <div class="review-container">
       <div class="review">
          <div class="user-foto">
-            <img src="../assets/img_avatar.png" alt="Avatar" class="user-foto-rounded">
+            <img src="https://i.ibb.co/6RTNGVd/img-avatar.webp" alt="img-avatar" border="0" class="user-foto-rounded">
          </div>
          <div class="user-rating">
             <div class="stars">
@@ -90,7 +90,7 @@
       </div>
       <div class="review">
          <div class="user-foto">
-            <img src="../assets/img_avatar.png" alt="Avatar" class="user-foto-rounded">
+            <img src="https://i.ibb.co/6RTNGVd/img-avatar.webp" alt="img-avatar" border="0" class="user-foto-rounded">
          </div>
          <div class="user-rating">
             <div class="stars">
@@ -108,7 +108,7 @@
       </div>
       <div class="review">
          <div class="user-foto">
-            <img src="../assets/img_avatar.png" alt="Avatar" class="user-foto-rounded">
+            <img src="https://i.ibb.co/6RTNGVd/img-avatar.webp" alt="img-avatar" border="0" class="user-foto-rounded">
          </div>
          <div class="user-rating">
             <div class="stars">
@@ -168,7 +168,7 @@
          
          <div class="presentazione">
              <h3 class="footer-desc">Questo sito è stato realizzato per il corso di Strumenti del web e data management</h3>
-             <a href="https://drive.google.com/file/d/1YBjC-xn7fckCzAfhmn6Gd4ZwG07KoX2m/view?usp=sharing" target="_blank"><h3 class="progetto-text">Progetto</h3></a>
+             <a href="../assets/Progetto_Sito_Web.pdf" target="_blank"><h3 class="progetto-text">Progetto</h3></a>
          </div>
      </footer>
       <script src="../scripts/rec.js"></script>
