--- a/templates/eventi.html
+++ b/templates/eventi.html
@@ -19,7 +19,7 @@
                 <nav class="main-nav" id="main-nav">
                     <ul class="main-nav-list">
                         <li>
-                            <a href="eventi.html">Eventi</a>
+                            <a href="eventi.html" class="choosen">Eventi</a>
                         </li>
                         <li>
                             <a href="info.html">Info</a>
@@ -101,7 +101,7 @@
             
             <div class="presentazione">
                 <h3 class="footer-desc">Questo sito è stato realizzato per il corso di Strumenti del web e data management</h3>
-                <a href="https://drive.google.com/file/d/1YBjC-xn7fckCzAfhmn6Gd4ZwG07KoX2m/view?usp=sharing" target="_blank"><h3 class="progetto-text">Progetto</h3></a>
+                <a href="../assets/Progetto_Sito_Web.pdf" target="_blank"><h3 class="progetto-text">Progetto</h3></a>
             </div>
         </footer>
         <script src="../scripts/global.js"></script>
