--- a/templates/info.html
+++ b/templates/info.html
@@ -21,7 +21,7 @@
                             <a href="eventi.html">Eventi</a>
                         </li>
                         <li>
-                            <a href="info.html">Info</a>
+                            <a href="info.html" class="choosen">Info</a>
                         </li>
                         <li>
                             <a href="app.html">Appuntamenti</a>
@@ -115,7 +115,7 @@
             
             <div class="presentazione">
                 <h3 class="footer-desc">Questo sito è stato realizzato per il corso di Strumenti del web e data management</h3>
-                <a href="https://drive.google.com/file/d/1YBjC-xn7fckCzAfhmn6Gd4ZwG07KoX2m/view?usp=sharing" target="_blank"><h3 class="progetto-text">Progetto</h3></a>
+                <a href="../assets/Progetto_Sito_Web.pdf" target="_blank"><h3 class="progetto-text">Progetto</h3></a>
             </div>
         </footer>
         <script src="../scripts/global.js"></script>
