--- a/templates/rec.html
+++ b/templates/rec.html
@@ -75,7 +75,7 @@
       <div>
          <img src="https://i.ibb.co/fXRjqwm/foto1.jpg" alt="foto1" border="0">
          <div>
-            <p>
+            <p class="recDesc">
                Vi aiutiamo a gestire le vostre idee e le vostre preoccupazioni più grandi, per
                assicurarvi di vivere il vostro giorno senza stress riuscendo a godervi ogni momento.
             </p>
@@ -84,7 +84,7 @@
       <div>
          <img src="https://i.ibb.co/WPTWzxG/foto2.jpg" alt="foto2" border="0">
          <div>
-            <p>
+            <p class="recDesc">
                Il nostro obiettivo è lasciare te e i tuoi ospiti con un evento che superi le aspettative e che durerà
                nei tuoi ricordi molto tempo dopo l’ultimo brindisi.
             </p>
@@ -93,7 +93,7 @@
       <div>
          <img src="https://i.ibb.co/cxMC4Jq/foto3.jpg" alt="foto3" border="0">
          <div>
-            <p>
+            <p class="recDesc">
                Siamo guidati da un’amore per i dettagli. Dalla bellezza di ogni singolo fiore, ogni luce posizionata al
                punto giusto.
             </p>
