--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: CatchyMager;
-    src: url("assets/Catchy Mager Regular.ttf");
+    src: url("assets/Catchy Mager Regular.woff2");
 }
 
 *{
